src/test/deca/syntax/invalid/synt/class1.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//     missing '}' at 'class'
//
// Historique:
//    cree le 01/01/2022

class A{}
class B{
    class C{}
}